--- a/client/src/components/ui/topBar/topBar.scss
+++ b/client/src/components/ui/topBar/topBar.scss
@@ -7,7 +7,13 @@
     background-color: white;
     border-bottom: 1px solid rgb(216, 216, 216);
 
+    @media (max-width: 710px) {
+        left: 100px;
+    width: 100%;
+
+    }
+
     .profileInfo{
-    
+     
     }
 }
