--- a/client/src/pages/routines/routinesBar/routinesBar.scss
+++ b/client/src/pages/routines/routinesBar/routinesBar.scss
@@ -11,6 +11,13 @@
     align-items: center;
     flex-direction: row;
 
+    @media (max-width: 710px) {
+        left: 100px;
+        width: 100%;
+
+    
+        }
+
     .newRoutineContainer {
         background-color: white;
         padding-left: 20px;
