--- a/client/src/components/ui/profileUI/profileUI.scss
+++ b/client/src/components/ui/profileUI/profileUI.scss
@@ -6,6 +6,13 @@
     font-weight: 200px;
     position: relative;
 
+    
+    @media (max-width: 710px) {
+    padding-right: 130px;
+     
+
+    }
+
     span{
     font-weight: 700;
 
