--- a/client/src/pages/routineView/routineViewBar/routineViewBar.scss
+++ b/client/src/pages/routineView/routineViewBar/routineViewBar.scss
@@ -10,6 +10,14 @@
     align-items: center;
     flex-direction: row;
 
+     
+    @media (max-width: 710px) {
+        left: 100px;
+        width: 100%;
+
+    
+        }
+
     .addExcerciseContainer {
         background-color: white;
         padding-left: 20px;
