--- a/client/src/components/newRoutineModal/newRoutineModal.scss
+++ b/client/src/components/newRoutineModal/newRoutineModal.scss
@@ -53,6 +53,12 @@
             flex-direction: column;
             align-items: center;
 
+            @media (max-width: 710px) {
+                width: 250px;
+
+        
+            }
+
 
             .formInputText {
                 box-sizing: border-box;   
