--- a/client/src/pages/routines/routines.scss
+++ b/client/src/pages/routines/routines.scss
@@ -1,37 +1,34 @@
+.routines {
+    @media (max-width: 710px) {
+        width: calc(100% - 60px);
+    }
 
-
-.routines{
-
-    .routines-container{
-
-
-       
+    .routines-container {
         position: relative;
-        top:110px;
+        top: 110px;
         left: 200px;
         display: flex;
         flex-wrap: wrap;
-   
-        height: calc(100vh - 110px);
-        width: calc(100% - 205px);
 
         @media (max-width: 710px) {
-            left: 100px;
+            left: 60px;
         }
 
-        a{
+    
+
+        a {
             text-decoration: none;
         }
 
-        Link{
+        Link {
             position: relative;
             z-index: 1;
         }
 
-        div{
+        div {
             position: relative;
-            
-            .routineDropdownMenu{
+
+            .routineDropdownMenu {
                 top: 10px;
                 right: 10px;
                 background-color: white;
@@ -40,20 +37,17 @@
             }
         }
 
-
-        .noRoutinesContainer{
+        .noRoutinesContainer {
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
 
-            h1{
+            h1 {
                 font-weight: 400;
                 font-size: 2.5rem;
                 color: rgb(173, 173, 173);
             }
         }
     }
-
-
 }
